syntax = "proto3";

package test;

option go_package = "github.com/nicrodriguezval/grpc/testpb";

message Test {
  string id = 1;
  string name = 2;
}

message GetTestRequest {
  string id = 1;
}

message CreateTestResponse {
  string id = 1;
}

service TestService {
  rpc GetTest(GetTestRequest) returns (Test);
  rpc CreateTest(Test) returns (CreateTestResponse);
}